# ComfyUI-JM-Gemini-API

./: .gitignore  README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt  test_import.py
config/: gemini_cookies.json
example_workflows/: gemini-reverse-engineering-workflow.json  gemini-watermark-remover-workflow.json
nodes/: README.md  __init__.py  jm_gemini_node.py  jm_gemini_reverse_node.py  jm_gemini_watermark_remover.py
nodes/gemini_reverse/: __init__.py  client.py  config.py
