[project]
name = "jm-gemini-api"
version = "1.0.1"
description = "Custom nodes for ComfyUI that generate images and videos using Google's Gemini API, supporting text-to-image, image-to-image, text-to-video, and image-to-video generation"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/juemingai/ComfyUI-JM-Gemini-API"
"Bug Tracker" = "https://github.com/juemingai/ComfyUI-JM-Gemini-API/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "jueming"
DisplayName = "ComfyUI-JM-Gemini-API"
Icon = "https://avatars.githubusercontent.com/u/178125918"

